# ome-zarr-C

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  pyproject.toml  setup.py
.agents/skills/ai-regression-testing/: SKILL.md
.agents/skills/benchmark-first/: SKILL.md
.agents/skills/browser-fallback/: SKILL.md
.agents/skills/compliance-and-rate-limit/: SKILL.md
.agents/skills/context-budget/: SKILL.md
.agents/skills/cpp-parity-porting/: SKILL.md
.agents/skills/cpp-performance-optimization/: SKILL.md
.agents/skills/cpp-performance-optimization/references/: official-guidance.md
.agents/skills/immutable-parity-proof/: SKILL.md
.agents/skills/pybind11-runtime-parity/: SKILL.md
.agents/skills/pybind11-runtime-parity/references/: official-guidance.md
.agents/skills/python-testing/: SKILL.md
.agents/skills/search-first/: SKILL.md
.agents/skills/tdd-workflow/: SKILL.md
.agents/skills/verification-loop/: SKILL.md
.agents/skills/workflow-supply-chain-maintenance/: SKILL.md
.agents/skills/workflow-supply-chain-maintenance/references/: official-guidance.md
.cursor/rules/: 00-porting-core.mdc
.github/: SECURITY.md  copilot-instructions.md  readme_badges.json
.github/codeql/: codeql-config.yml
.github/instructions/: cpp-porting.instructions.md  testing.instructions.md  workflows.instructions.md
.github/workflows/: native-cpp-guard.yml  protect-frozen-source-snapshot.yml  ruff.yml  security-code-scanning.yml  tests.yml
benchmarks/: __init__.py  cases.py  catalog.py  public_api_cases.py  public_fixtures.py  realdata_cases.py  report.py  run.py  runtime_support.py
benchmarks/native/: __init__.py  standalone.py
benchmarks/python/: __init__.py  upstream.py
benchmarks/results/: format-slice-v4-report.md  format-slice-v4.json
benchmarks/results/iteration/: create-runtime-cleanup.md  csv-runtime-cleanup.md
cpp/: core.cpp
cpp/api/: ome_zarr_native_api.cpp  ome_zarr_native_api.h
cpp/assets/create/: astronaut_v04_seed0.tar  astronaut_v05_seed0.tar  coins_v04_seed0.tar  coins_v05_seed0.tar  manifest.json
cpp/bindings/: basic_bindings.cpp  cli_bindings.cpp  common.hpp  csv_bindings.cpp  dask_utils_bindings.cpp  data_bindings.cpp  format_bindings.cpp  io_bindings.cpp  module.cpp  reader_bindings.cpp  scale_bindings.cpp  utils_bindings.cpp  writer_bindings.cpp
cpp/native/: axes.cpp  axes.hpp  cli.cpp  cli.hpp  conversions.cpp  conversions.hpp  create_assets.cpp  create_assets.hpp  create_runtime.cpp  create_runtime.hpp  csv.cpp  csv.hpp  dask_utils.cpp  dask_utils.hpp  data.cpp  data.hpp  format.cpp  format.hpp  io.cpp  io.hpp  local_runtime.cpp  local_runtime.hpp  python_random.cpp  python_random.hpp  reader.cpp  reader.hpp  reader_oracle.cpp  reader_oracle.hpp  scale.cpp  scale.hpp  scale_runtime.cpp  scale_runtime.hpp  types.hpp  utils.cpp  utils.hpp  version.hpp  writer.cpp  writer.hpp
cpp/tools/: native_api_selftest.cpp  native_bench_core.cpp  native_bench_format.cpp  native_cli.cpp  native_oracle_probe.cpp  native_selftest.cpp
docs/: index.md
docs/reference/: ai-agent-context-routing.md  ai-agent-dos-and-donts.md  ai-agent-integrations.md  ai-agent-skills.md  ai-agent-web-research-stack.md  architecture-first-porting.md  benchmark-suite.md  cpp-user-guide.md  external-native-landscape.md  frozen-source-manifest.sha256  immutable-parity-proof.md  native-build-and-selftest.md  native-c-api-interop.md  native-cpp-debt-baseline.json  native-dependency-manifest.json  porting-contract.md  public-api-benchmark-results.md  public-benchmark-fixtures.md  pure-native-coverage-manifest.json  pure-native-coverage.md  pure-native-cpp-policy.md  split-native-coverage-manifest.json  split-native-coverage.md  standalone-cpp-target.md
ome_zarr_c/: __init__.py  _frozen_upstream.py  axes.py  cli.py  csv.py  dask_utils.py  data.py  format.py  io.py  reader.py  scale.py  types.py  utils.py  writer.py
omero_zarr_c/: __init__.py  conversions.py
scripts/: check_native_cpp.py  check_public_api_benchmark_coverage.py  check_pure_native_cpp.py  check_repo_consistency.py  compare_iteration_benchmarks.py  frozen_source_manifest.py  generate_create_assets.py  gpu_capability_probe.py  install_latest_native_toolchain.sh  report_pure_native_coverage.py  report_split_native_coverage.py
tests/: __init__.py  _outcomes.py  test_axes_equivalence.py  test_benchmark_report.py  test_cli_equivalence.py  test_conversions_equivalence.py  test_csv_equivalence.py  test_dask_utils_equivalence.py  test_data_equivalence.py  test_data_runtime_equivalence.py  test_format_equivalence.py  test_gpu_capability_probe.py  test_io_equivalence.py  test_native_c_api_interop.py  test_package_compatibility.py  test_reader_equivalence.py  test_scale_equivalence.py  test_scaler_equivalence.py  test_scaler_runtime_equivalence.py  test_utils_download_runtime.py  test_utils_equivalence.py  test_utils_info_equivalence.py  test_workflow_default_branch_contract.py  test_writer_equivalence.py  test_writer_image_equivalence.py  test_writer_runtime_equivalence.py
