[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "ome-zarr-c"
version = "0.0.1"
description = "Release-anchored standalone C++ parity port workspace for ome/ome-zarr-py."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-2-Clause"
dependencies = [
    "Deprecated",
    "aiohttp",
    "dask>=2025.12.0,<=2026.3.0",
    "fsspec[s3]>=0.8,!=2021.07.0,!=2023.9.0",
    "numpy>=2.4.4",
    "rangehttpserver>=1.4.0",
    "requests",
    "scikit-image>=0.19.0",
    "toolz",
    "zarr>=3.1.6",
]

[project.optional-dependencies]
benchmark = [
    "pyperf>=2.10.0",
]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]

[project.urls]
Repository = "https://github.com/strmt7/ome-zarr-C"
Upstream = "https://github.com/ome/ome-zarr-py"
OriginalRelease = "https://github.com/ome/ome-zarr-py/releases/tag/v0.15.0"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
    # The frozen upstream v0.15.0 oracle constructs Deprecated.Scaler at import/runtime.
    # The snapshot is immutable; keep parity tests clean without hiding new warnings.
    "ignore:Call to deprecated class Scaler.*:DeprecationWarning:ome_zarr\\.data",
    "ignore:Call to deprecated class Scaler.*:DeprecationWarning:ome_zarr\\.writer",
]

[tool.ruff]
extend-exclude = ["source_code_v.0.15.0"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
